--- a/index.html
+++ b/index.html
@@ -2,23 +2,31 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, intial-scale=1.0">
-        <title>SHIT</title>
-        <link rel="stylesheet" href="fonts.css" !important>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Website</title>
+        <link rel="stylesheet" href="main.css" !important>
     </head>
-    <div class="header">
-        <h1>HOLY MOLY</h1>
-        <p>WHAT LOADS OF CRAP!</p>
-    </div>
+    <body>
+        <header class="header">
+            <nav id="nav">
+                <a href="https://www.linkedin.com/in/snigdhaghoshdastidar/" >linkedin</a>
+            </nav>
+            <div class="intro">
+                <h1 id="name">Snigdha Ghosh Dastidar</h1>
+                <!-- links: -->
+            </div>
+        </header>
 
-    <!-- TRYING LINKS -->
-    <div class="links">
-        <a href="https://www.youtube.com/">youtube</a>
-    </div>
+        <!-- <div class="social">
+            <a target="_blank" href="mailto:sdasti2@uic.edu"><i class="far fa-envolope"></i></a>
+        </div> -->
 
-    <!-- Navigation bar -->
-    <div class="navbar">
-        <a href="https://www.linkedin.com/in/snigdhaghoshdastidar/" >linkedin</a>
-        <a href="https://catalog.uic.edu/ucat/colleges-depts/engineering/cs/bs-cs/">uicCS</a>
-    </div>
+        <div>
+            <p>HAHAHAHA MY MY</p>
+        </div>
+
+        <script src="website.js"></script>
+        <noscript>You need to enable JavaScript to view the full site.</noscript>
+    </body>
+
 </html>
