--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     </head>
     <body>
         <header class="header">
-            <nav id="nav">
-                <a href="https://www.linkedin.com/in/snigdhaghoshdastidar/" >linkedin</a>
+            <nav class="nav-block" class style="display: block;">
+                <ul class="nav">
+                    <li class="nav-page"><a class="smoothscroll" href="#home">Home</a></li>
+                    <li class="nav-page"><a class="smoothscroll" href="#about">About</a></li>
+                </ul>
             </nav>
-            <div class="intro">
+            <div class="home">
                 <h1 id="name">Snigdha Ghosh Dastidar</h1>
                 <!-- links: -->
             </div>
@@ -21,9 +24,10 @@
             <a target="_blank" href="mailto:sdasti2@uic.edu"><i class="far fa-envolope"></i></a>
         </div> -->
 
-        <div>
+        <section id="about">
             <p>HAHAHAHA MY MY</p>
-        </div>
+            <p>WOAHHHHHHHH</p>
+        </section>
 
         <script src="website.js"></script>
         <noscript>You need to enable JavaScript to view the full site.</noscript>
