--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
         <link rel="stylesheet" href="main.css" !important>
     </head>
     <body>
-        <header class="header">
-            <nav class="nav-block" class style="display: block;">
+        <header id="header">
+            <nav class="nav-block">
                 <ul class="nav">
-                    <li class="nav-page"><a class="smoothscroll" href="#home">Home</a></li>
-                    <li class="nav-page"><a class="smoothscroll" href="#about">About</a></li>
+                    <li class="nav-page"><a class="smoothscroll" href="#home">HOME</a></li>
+                    <li class="nav-page"><a class="smoothscroll" href="#about">ABOUT</a></li>
+                    <li class="nav-page"><a class="smoothscroll" href="#projects">PROJECTS</a></li>
+                    <li class="nav-page"><a class="smoothscroll" href="#resume">RESUME</a></li>
+                    <li class="nav-page"><a class="smoothscroll" href="#contact">CONNECT</a></li>
+                </ul>
+                </ul>
                 </ul>
             </nav>
-            <div class="home">
+            <div id="home">
                 <h1 id="name">Snigdha Ghosh Dastidar</h1>
                 <!-- links: -->
             </div>
@@ -27,6 +32,15 @@
         <section id="about">
             <p>HAHAHAHA MY MY</p>
             <p>WOAHHHHHHHH</p>
+        </section>
+        <section id="projects">
+            <p>Projects lol</p>
+        </section>
+        <section id="resume">
+            <p> RESUME SHOW ANOTHER PAGE </p>
+        </section>
+        <section id="contact">
+            <p> CONTACT INFO?</p>
         </section>
 
         <script src="website.js"></script>
