--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Website</title>
-        <link rel="stylesheet" href="main.css" !important>
+        <link rel="stylesheet" href="css/main.css" !important>
     </head>
     <body>
         <header id="header">
@@ -15,8 +15,6 @@
                     <li class="nav-page"><a class="smoothscroll" href="#projects">PROJECTS</a></li>
                     <li class="nav-page"><a class="smoothscroll" href="#resume">RESUME</a></li>
                     <li class="nav-page"><a class="smoothscroll" href="#contact">CONNECT</a></li>
-                </ul>
-                </ul>
                 </ul>
             </nav>
             <div id="home">
@@ -43,7 +41,7 @@
             <p> CONTACT INFO?</p>
         </section>
 
-        <script src="website.js"></script>
+        <script src="js/website.js"></script>
         <noscript>You need to enable JavaScript to view the full site.</noscript>
     </body>
 
