--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
                 <img id="pic" src="images/myPic.jpg" alt="">
             </div> -->
             <div class="about-content">
-                <h3>About Me!</h3>
+                <h3>ABOUT ME</h3>
                 <!-- TODO: use span/div -> id -> different colors -->
-                <p> <br><br>>Where am I from?<br> India but born and raised in Oman.
-                    <br><br>>Education<br> University of Illinois at Chicago
-                    <br><br>>Major<br> Computer Science, minoring in Mathematics.
-                    <br><br>>Expected Graduation<br> May 2023.
-                    <br><br>>Interests<br> eating, sleeping.
+                <p> <br><br>> Where am I from?<br> India but born and raised in Oman.
+                    <br><br>> Education<br> University of Illinois at Chicago
+                    <br><br>> Major<br> Computer Science, minoring in Mathematics.
+                    <br><br>> Expected Graduation<br> May 2023.
+                    <br><br>> Interests<br> eating, sleeping.
                     <br> HAHAHHAHAHAHA
                     <br> WOAHHHH
                 </p>
@@ -63,30 +63,50 @@
         </section> -->
 
         <section id="project" class="project web-section">
-            <h1>Projects lol</h1>
+            <h1>PROJECTS LMAOO</h1>
+            <h2>A few of my personal and coursework projects</h2>
+            <div class="project-list">
+                <div class="project-item">
+                   <a class="project-item__thumb">
+                        <img src="images/c4.png" 
+                        srcset="images/c4.png 1x, images/c4.png 2x" alt="">
+                   </a>
+                </div>
+                <div class="project-item">
+                    <a class="project-item__thumb">
+                        <img src="images/p3.png" srcset="images/p3.png 1x, images/p3.png 2x" alt="">
+                    </a>
+                </div>
+            </div>
         </section>
 
         <section id="contact" class="contact web-section">
-            <h1>Say Hi!</h1>
+            <h3>CONTACT</h3>
+            <h1>Say Hello!</h1>
+            <!-- <h3>Get In Touch</h3> -->
             <span class=contact-content>
                 <div>
-                    <p id="contact-info".>
-                        Email
-                        <br>sdasti2@uic.edu  
+                    <p id="contact-info">
                         <a target="_blank" href="mailto:sdasti2@uic.edu"><i class="far fa-paper-plane"></i></a>
+                        <br><br>Email Me at
+                        <br><span style="color:rgb(41,41,41);">
+                            sdasti2@uic.edu
+                        </span>
                     </p>
                 </div>
                 <!-- <span style="padding-left: 5rem;"> -->
                 <div>
                     <p id="contact-info">
-                        Connect on Linkedin<br>
                         <a target="_blank" href="https://www.linkedin.com/in/snigdhaghoshdastidar/"><i class="fab fa-linkedin-in"></i></a>
+                        <br><br>Lets Connect On <br>
+                        <a id="word-link" target="_blank" href="https://www.linkedin.com/in/snigdhaghoshdastidar/">Linkedin</a> 
                     </p>
                 </div>
                 <div>
-                    <p id="contact-info">LMAOOO<br>
+                    <p id="contact-info">
                         <a target="_blank" href="https://www.instagram.com/snigdhaghosh_/"><i class="fab fa-instagram-square"></i></a>
                         <a target="_blank" href="https://www.facebook.com/snigdhaghoshdastidar/"> <i class="fab fa-facebook-square"></i></a>
+                        <br><br> Get In Touch
                     </p>
                 </div>
             </span>
