--- a/index.html
+++ b/index.html
@@ -66,16 +66,17 @@
             <h1>PROJECTS LMAOO</h1>
             <h2>A few of my personal and coursework projects</h2>
             <div class="project-list">
-                <div class="project-item">
-                   <a class="project-item__thumb">
-                        <img src="images/c4.png" 
-                        srcset="images/c4.png 1x, images/c4.png 2x" alt="">
-                   </a>
-                </div>
-                <div class="project-item">
-                    <a class="project-item__thumb">
-                        <img src="images/p3.png" srcset="images/p3.png 1x, images/p3.png 2x" alt="">
-                    </a>
+                <div id="project-row">
+                    <div class="project-item">
+                        <a class="project-item__thumb">
+                            <img src="images/c4.png" srcset="images/c4.png 1x, images/c4.png 2x" alt="">
+                        </a>
+                    </div>
+                    <div class="project-item">
+                        <a class="project-item__thumb">
+                            <img src="images/p3.png" srcset="images/p3.png 1x, images/p3.png 2x" alt="">
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -121,5 +122,4 @@
         <script src="js/main.js"></script>
         <noscript>You need to enable JavaScript to view the full site.</noscript>
     </body>
-
 </html>
